--- a/first-angular-app/src/app/user/user.component.html
+++ b/first-angular-app/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div>
-  <button>
-    <img [src]="'assets/users/' + selectedUser.avatar" alt="user-logo" />
-    <span>{{ selectedUser.name }}</span>
+  <button (click)="onSelectUser()">
+    <img [src]="imagePath()" [alt]="selectedUser().name" />
+    <span>{{ selectedUser().name }}</span>
   </button>
 </div>
